# index-maker

./: .dockerignore  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  Cargo.toml.orig  Cargo.working.toml  Dockerfile  Dockerfile.otlp  Dockerfile.trixie  Makefile  README.md  docker-compose.otlp.yaml  docker-compose.yml  numbers.txt  otel-collector-config.yaml  sbe_test.txt
apps/anvil_orchestrator/: Cargo.toml  foundry.toml
apps/anvil_orchestrator/contract/: DepositEmitter.sol
apps/anvil_orchestrator/src/: main.rs
apps/liquidity_tracker/: Cargo.toml
apps/liquidity_tracker/src/: main.rs
apps/migrate_persistence/: Cargo.toml  README.md
apps/migrate_persistence/src/: main.rs
apps/solver_lambda/: Cargo.toml
apps/solver_lambda/example_data/: 1_input.json  1_output.json  2_input.json  2_output.json  3_input.json  3_output.json  4_input.json  4_output.json
apps/solver_lambda/src/: lib.rs  main.rs  solver_input.rs  solver_output.rs  solver_output_chain_connector.rs  solver_output_collateral_bridge.rs  solver_output_order_sender.rs  solver_output_server.rs  solver_service.rs  solver_state.rs  solver_state_order_ids.rs
apps/tracker/: Cargo.toml
apps/tracker/src/: csv_writer.rs  lib.rs  main.rs  metrics_buffer.rs  metrics_collector.rs  stats_buffer.rs  symbols_csv.rs
configs/: BasketManagerConfig.json  config.json  config.toml  index_config.json  index_deployment.json  index_maker.json
deploy_templates/: .index-maker.example  Dockerfile.otlp.prod  build-service.sh.template  docker-compose.prod.yaml  docker-compose.prod.yaml.template  otel-collector-config.prod.yaml  otel-collector-config.prod.yaml.template  service-control.sh.template  service-logs.sh.template  stop-service.sh.template
docs/: README.md  dsolver-collab-batch-creation.drawio  dsolver-collab-batch-processing.drawio  solver-collab-index-order.drawio  solver-collab-set-weights.drawio  solver-components_deps.drawio  solver-components_progress.drawio  solver-components_v1.drawio  solver-maintain-inventory_v1.drawio  solver-processes_v1.drawio  solver-set-weights_v1.drawio
examples/: .env.example  Cargo.toml  README.md  binance_market_data_output.txt  binance_new_ioc_cancelled_output.txt  binance_new_ioc_filled_output.txt  binance_new_limit_book_output.txt
examples/binance_market_data/: book_building.rs  book_depth.rs  main.rs  market_data.rs  market_data_connector.rs
examples/binance_order_sending/: all_orders.rs  all_orders_rest.rs  all_orders_wsapi.rs  logon_wsapi.rs  main.rs  wss_sample.rs
examples/evm_connector/: across_bridge.rs  erc20_bridge.rs  generic_bridge.rs  main.rs  main_bridge.rs  test_erc20_transfer.rs  test_generic_bridge.rs
examples/fix_server/: composite_plugin.rs  example_plugin.rs  fix_messages.rs  fix_server.rs  main.rs  requests.rs  responses.rs  solver.rs
examples/otcIndex_tester/: client.html  main.rs
libs/alloy-chain-connector/: Cargo.toml
libs/alloy-chain-connector/src/: arbiter.rs  chain_connector.rs  chain_connector_sender.rs  command.rs  contracts.rs  credentials.rs  lib.rs  multiprovider.rs  session.rs  sessions.rs  util.rs
libs/alloy-chain-connector/src/collateral/: otc_custody_designation.rs  otc_custody_to_wallet_bridge.rs  signer_to_wallet_bridge.rs  signer_wallet_designation.rs  wallet_designation.rs
libs/alloy-chain-connector/src/rpc/: basic_session.rs  custody_session.rs  issuer_session.rs  issuer_stream copy.rs  issuer_stream.rs
libs/alloy-chain-connector/src/util/: amount_converter.rs  gas_util.rs  timestamp_util.rs  verification_data.rs  weights_util.rs
libs/alloy-evm-connector/: Cargo.toml  env.example
libs/alloy-evm-connector/examples/: across_deposit_example.rs
libs/alloy-evm-connector/src/: abis.rs  across_bridge.rs  across_deposit.rs  arbiter.rs  chain_operation.rs  chain_operations.rs  commands.rs  config.rs  contracts.rs  credentials.rs  custody_helper.rs  designation.rs  designation_details.rs  erc20_bridge.rs  evm_bridge.rs  evm_connector.rs  lib.rs  utils.rs
libs/axum-fix-server/: Cargo.toml
libs/axum-fix-server/src/: fix_server.rs  lib.rs  messages.rs  server.rs  server_plugin.rs  server_state.rs  session.rs  session_state.rs
libs/axum-fix-server/src/plugins/: error_plugin.rs  observer_plugin.rs  rate_limit_plugin.rs  seq_num_plugin.rs  serde_plugin.rs  server_plugin.rs  sign_plugin.rs  storage_plugin.rs  user_plugin.rs
libs/binance-market-data/: Cargo.toml
libs/binance-market-data/src/: arbiter.rs  async_loop.rs  binance_market_data.rs  binance_subscriber.rs  book.rs  lib.rs  subscriber.rs  subscribers.rs  subscriptions.rs
libs/binance-order-sending/: Cargo.toml
libs/binance-order-sending/src/: arbiter.rs  binance_order_sending.rs  command.rs  config.rs  credentials.rs  error_classifier.rs  lib.rs  session.rs  session_completion.rs  session_error.rs  session_termination.rs  sessions.rs  signing.rs  subaccounts.rs  trading_markets.rs  trading_session.rs  util.rs  wssutil.rs
libs/ca-helper/: Cargo.toml
libs/ca-helper/src/: contracts.rs  custody_helper.rs  index.rs  index_helper.rs  lib.rs
libs/otc-custody/: Cargo.toml
libs/otc-custody/src/: connector_util.rs  contracts.rs  custody_authority.rs  custody_client.rs  custody_helper.rs  lib.rs  schnorr.rs  util.rs
libs/otc-custody/src/index/: index.rs  index_deployment.rs  index_deployment_serde.rs  index_helper.rs
libs/symm-core/: Cargo.toml
libs/symm-core/src/: lib.rs
libs/symm-core/src/assets/: asset.rs
libs/symm-core/src/collateral/: collateral_bridge.rs
libs/symm-core/src/core/: arcswaputil.rs  async_loop.rs  bits.rs  decimal_macros.rs  functional.rs  id_macros.rs  json_file.rs  json_file_async.rs  limit.rs  logging.rs  persistence.rs  telemetry.rs  test_util.rs  tracing.rs
libs/symm-core/src/market_data/: exchange_rates.rs  market_data_connector.rs  price_tracker.rs
libs/symm-core/src/market_data/order_book/: order_book.rs  order_book_manager.rs
libs/symm-core/src/order_sender/: inventory_manager.rs  order_connector.rs  order_tracker.rs  position.rs
libs/symm-core/src/tracing/: defer_log.rs  defer_span.rs  otlp_log.rs  otlp_tracing.rs
(+199 files in other folders)
