[workspace]
members = [
    ".",
    "libs/alloy-chain-connector",
    "libs/axum-fix-server",
    "libs/binance-market-data",
    "libs/binance-order-sending",
    "libs/bitget-market-data",
    "libs/index-core",
    "libs/market-data",
    "libs/otc-custody",
    "libs/symm-core",
    "examples",
    "proc-macros/derive-with-baggage",
    "proc-macros/safe-math",
    "apps/anvil_orchestrator",
    "apps/anvil_provisioner",
    "apps/index_deployer",
    "apps/tracker",
    "_deprecated/liquidity_tracker",
    "_deprecated/alloy-evm-connector",
]

[package]
name = "index-maker"
version = "0.1.0"
edition = "2021"
autoexamples = false

[features]
alpine-deploy = ["openssl/vendored"]

[dependencies]
alloy = { workspace = true }
alloy-chain-connector = { workspace = true }
alloy-consensus = { workspace = true }
alloy-merkle-tree = { workspace = true }
alloy-network = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
axum-fix-server = { workspace = true }
binance-market-data = { workspace = true }
binance-order-sending = { workspace = true }
bitget-market-data = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
crossbeam = { workspace = true }
csv = { workspace = true }
derive-with-baggage = { workspace = true }
derive_builder = { workspace = true }
ethers = { workspace = true }
ethers-core = { workspace = true }
ethers-signers = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
index-core = { workspace = true }
intrusive-collections = { workspace = true }
itertools = { workspace = true }
k256 = { workspace = true }
market-data = { workspace = true }
num_enum = { workspace = true }
openssl = { workspace = true, optional = true }
opentelemetry = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry_sdk = { workspace = true }
otc-custody = { workspace = true }
parking_lot = { workspace = true }
rand_core = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
safe-math = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
statrs = { workspace = true }
string_cache = { workspace = true }
struple = { workspace = true }
symm-core = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
paste = { workspace = true }
test-case = { workspace = true }

[workspace.dependencies]
alloy = { version = "1.0.9", features = ["full"] }
alloy-chain-connector = { path = "./libs/alloy-chain-connector" }
alloy-consensus = "1.0.25"
alloy-evm-connector = { path = "./_deprecated/alloy-evm-connector" }
alloy-merkle-tree = "0.7.4"
alloy-network = "1.0.25"
alloy-primitives = "1.3.0"
alloy-rpc-types-eth = "1.0.24"
arc-swap = "1.7.1"
async-trait = "0.1.88"
axum = { version = "0.7", features = ["ws"] }
axum-fix-server = { path = "./libs/axum-fix-server" }
axum-server = "0.6"
base64 = "0.22.1"
binance-market-data = { path = "libs/binance-market-data" }
binance-order-sending = { path = "libs/binance-order-sending" }
binance-sdk = { version = "^7.0.0", features = ["spot"] }
#binance-sdk = { path = "./subs/binance-connector-rust", features = ["spot"] }
bitget-market-data = { path = "libs/bitget-market-data" }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossbeam = "0.8.4"
csv = "1"
derive-with-baggage = { path = "./proc-macros/derive-with-baggage" }
derive_builder = "^0.10"
dotenv = "0.15"
ethers = "1.0"
ethers-core = "1.0"
ethers-signers = "1"
eyre = "0.6.12"
futures = "0.3.31"
futures-util = "0.3.31"
hex = "0.4"
index-core = { path = "./libs/index-core" }
index-maker = { path = "." }
intrusive-collections = "0.9.7"
itertools = "0.14.0"
k256 = { version = "0.13.3", features = ["ecdsa", "arithmetic"] }
market-data = { path = "libs/market-data" }
merkle-tree-rs = "0.1.0"
num_enum = "0.7.4"
openssl = { version = "^0.10" }
opentelemetry = { version = "0.30", features = ["trace", "metrics", "logs"] }
opentelemetry-appender-tracing = "0.30.1"
opentelemetry-otlp = { version = "0.30", default-features = false, features = ["trace", "http-proto", "reqwest-client", "tokio", "logs"] }
opentelemetry-semantic-conventions = "0.30"
opentelemetry_sdk = { version = "0.30", features = ["trace", "rt-tokio", "logs"] }
otc-custody = { path = "./libs/otc-custody" }
parking_lot = "0.12.4"
paste = "1.0.15"
quote = "1.0.40"
rand = "0.9.1"
rand_core = "0.6"
reqwest = { version = "0.11", features = ["json"] }
rust_decimal = { version = "1.37.2", features = ["serde", "macros", "maths"] }
rust_decimal_macros = "1"
safe-math = { path = "./proc-macros/safe-math" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10"
statrs = "0.16"
string_cache = "0.8.9"
struple = { version = "0.2.0" }
symm-core = { path = "./libs/symm-core" }
syn = "2.0.104"
test-case = "*"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.15", features = ["time"] }
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
dotenvy = "0.15"
