[package]
name = "examples"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
alloy = { workspace = true }
index-maker = { workspace = true }
alloy-evm-connector = { workspace = true }
binance-market-data = { workspace = true }
binance-order-sending = { workspace = true }
binance-sdk = { workspace = true, features = ["spot"] }
chrono = { workspace = true }
axum-fix-server = { workspace = true }
clap = { workspace = true }
crossbeam = { workspace = true }
eyre = { workspace = true }
futures-util = { workspace = true }
index-core = { workspace = true }
itertools = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
symm-core = { workspace = true, path = "../libs/symm-core" }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }


[[example]]
name="binance-market-data"
path="binance_market_data/market_data.rs"

[[example]]
name="binance-order-book"
path="binance_market_data/book_building.rs"

[[example]]
name="binance-all-orders-rest"
path="binance_order_sending/all_orders_rest.rs"

[[example]]
name="binance-all-orders-wsapi"
path="binance_order_sending/all_orders_wsapi.rs"

[[example]]
name="binance-logon-wsapi"
path="binance_order_sending/logon_wsapi.rs"

[[example]]
name="binance-order-sending"
path="binance_order_sending/main.rs"

[[example]]
name="fix-server"
path="fix_server/main.rs"

[[example]]
name = "evm-connector"
path = "evm_connector/main.rs"

[[example]]
name = "evm-bridge"
path = "evm_connector/main_bridge.rs"

[[example]]
name = "test-generic-bridge"
path = "evm_connector/test_generic_bridge.rs"

[[example]]
name = "test-erc20-transfer"
path = "evm_connector/test_erc20_transfer.rs"

[[example]]
name = "test-erc20-bridge-end-to-end"
path = "evm_connector/test_erc20_bridge_end_to_end.rs"
