[package]
name = "anvil_orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { workspace = true }
alloy-evm-connector = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rust_decimal = { workspace = true }
hex = { workspace = true }
anyhow = "1"