[package]
name = "liquidity_tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
csv = { workspace = true }
safe-math = { workspace = true }
parking_lot = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
statrs = { workspace = true }
symm-core = { workspace = true }
market-data = { workspace = true }
binance-market-data = { workspace = true }
index-maker = { workspace = true }
tracing = { workspace = true }
rust_decimal_macros = { workspace = true }