[package]
name = "alloy-chain-connector"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
alloy = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
crossbeam = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
index-core = { workspace = true }
itertools = { workspace = true }
otc-custody = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
safe-math = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
symm-core = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }