[package]
name = "alloy-evm-connector"
version = "0.1.0"
edition = "2021"
publish = false

[[example]]
name = "across_deposit_example"
path = "examples/across_deposit_example.rs"

[lints.clippy]
too_many_arguments = "allow"

[dependencies]
alloy = { workspace = true }
chrono = { workspace = true }
dotenv = "0.15"
ethers = "1.0"
eyre = { workspace = true }
futures-util = "0.3.31"
itertools = { workspace = true }
merkle-tree-rs = "0.1.0"
parking_lot = { workspace = true }
rand = "0.9.1"
reqwest = { version = "0.11", features = ["json"] }
rust_decimal = "1.37.1"
safe-math = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
symm-core = { workspace = true, path = "../libs/symm-core" }
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = "0.7.15"