[package]
name = "alloy-evm-connector"
version = "0.1.0"
edition = "2021"
publish = false

[[example]]
name = "across_deposit_example"
path = "examples/across_deposit_example.rs"

[lints.clippy]
too_many_arguments = "allow"

[dependencies]
alloy = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
ethers = { workspace = true }
eyre = { workspace = true }
futures-util = { workspace = true }
index-core = { workspace = true }
itertools = { workspace = true }
merkle-tree-rs = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
rust_decimal = { workspace = true }
safe-math = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
symm-core = { workspace = true, path = "../libs/symm-core" }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
