[package]
name = "axum-fix-server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
chrono = { workspace = true }
eyre = { workspace = true }
futures-util = { workspace = true }
itertools = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
symm-core = { workspace = true }
thiserror = { workspace = true }
