[package]
name = "binance-order-sending"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
index-maker = { path = "../.." }
async-core = { path = "../async-core" }
binance_spot_connector_rust = { version = "1.3.0", features = ["full"] }
base64 = "0.22.1"
chrono = { workspace = true }
ed25519-dalek = { version = "2.1.0", features = ["serde", "zeroize", "rand_core", "digest", "pkcs8", "pem"] }
eyre = { workspace = true }
futures-util = "0.3.31"
hmac = "0.12.0"
itertools = { workspace = true }
parking_lot = { workspace = true }
rand = "0.9.1"
rust_decimal = "1.37.1"
sha2 = { version = "0.10.6", default-features = false, features = ["oid"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
signature = "2.2.0"
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = {version = "0.23.1", features = ["native-tls"]}
tokio-util = "0.7.15"
uuid = { version = "1.0", features = ["v4"] }

