[package]
name = "binance-order-sending"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
index-maker = { path = "../.." }
async-core = { path = "../async-core" }
base64 = "0.22.1"
binance-sdk = { version = "1.0.0", features = ["spot"] }
chrono = { workspace = true }
eyre = { workspace = true }
futures-util = "0.3.31"
itertools = { workspace = true }
parking_lot = { workspace = true }
rust_decimal = "1.37.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = "0.7.15"

