[package]
name = "binance-order-sending"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
index-maker = { workspace = true }
async-core = { workspace = true }
base64 = { workspace = true }
binance-sdk = { workspace = true }
chrono = { workspace = true }
eyre = { workspace = true }
futures-util = { workspace = true }
itertools = { workspace = true }
parking_lot = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }

