[package]
name = "ca-helper"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
alloy = { workspace = true }
ethers = { workspace = true }
merkle-tree-rs = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }