[package]
name = "symm-core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
alloy = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
crossbeam = { workspace = true }
derive-with-baggage = { workspace = true }
eyre = { workspace = true }
futures-util = { workspace = true }
intrusive-collections = { workspace = true }
itertools = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry_sdk = { workspace = true }
parking_lot = { workspace = true }
rust_decimal = { workspace = true }
safe-math = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
string_cache = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
paste = { workspace = true }
test-case = { workspace = true }


